# edns_proxy

./: .gitignore  Cargo.toml  README.md
examples/: ca.crt  ca.key  ca.srl  config.yaml  dnsmasq.conf  static_records.yaml  test.crt  test.csr  test.key
src/: addr.rs  cache.rs  config.rs  layer.rs  lib.rs  log.rs  main.rs  proxy.rs  retry.rs  route.rs  utils.rs  wrr.rs
src/backend/: adaptor_backend.rs  group.rs  h3.rs  https.rs  mod.rs  quic.rs  static_file.rs  tls.rs  udp.rs
src/backend/backend2/: https.rs  mod.rs  quic.rs  tls.rs  udp.rs
src/filter/: ecs.rs  mod.rs  static_ecs.rs
src/route/: dnsmasq.rs  mod.rs
src/server/: http.rs  https.rs  mod.rs  quic.rs  tls.rs  udp.rs
