[package]
name = "edns_proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-notify = "0.3.3"
async-trait = "0.1.89"
cidr = "0.3.2"
clap = { version = "4.5.59", features = ["derive", "env"] }
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
futures-util = "0.3.32"
hickory-proto = { version = "0.25.2", features = ["https-aws-lc-rs"] } # disable dnssec to fix compile error
hickory-resolver = { version = "0.25.2", default-features = false, features = ["tokio"] }
hickory-server = { version = "0.25.2", features = ["https-aws-lc-rs", "h3-aws-lc-rs", "quic-aws-lc-rs"] }
humantime-serde = "1.1.1"
itertools = "0.14.0"
json-subscriber = { version = "0.2.7", features = ["tracing-opentelemetry-0-32"] }
mimalloc = "0.1.48"
moka = { version = "0.12.13", features = ["future"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
rand = "0.10.0"
rustls = { version = "0.23.36" }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.6.2"
tokio = { version = "1.49.0", features = ["macros", "net", "rt", "signal"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
